Исправил ответ за указанный год и месяц
